* tests/recursive.at: New tests for libltdl as a subdirectory, configured and compiled from the toplevel project using a recursive make.. * tests/testsuite.at: Use it. * Makefile.am (TESTSUITE_AT): Depend on it.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-11-07  Gary V. Vaughan  <gary@gnu.org>
 
+	* tests/recursive.at: New tests for libltdl as a subdirectory,
+	configured and compiled from the toplevel project using a
+	recursive make..
+	* tests/testsuite.at: Use it.
+	* Makefile.am (TESTSUITE_AT): Depend on it.
+
+2005-11-07  Gary V. Vaughan  <gary@gnu.org>
+
 	* libltdl/m4/ltdl.m4 (LTDL_INIT): Don't force running
 	AC_CONFIG_HEADERS for subproject ltdl.
 	* tests/old-m4-iface.at, tests/subproject.at: Remove workaround.
