--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-11-07  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* libtool.m4 (AC_LIBTOOL_LANG_CXX_CONFIG)
+	(AC_LIBTOOL_PROG_LD_SHLIBS) [ hpux10, hpux11 ]:
+	hardcode_libdir_flag_spec and hardcode_minus_L are the same for
+	hppa*64 and ia64*. Don't set
+	hardcode_libdir_flag_spec='-L$libdir' on ia64* because if you
+	specify +b and -L, +b overrides what is set into DT_RPATH.
+
 2005-11-06  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libtool.m4 (_LT_AC_TRY_DLOPEN_SELF): lt_unknown is
