--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-07  Kean Johnston  <jkj@sco.com>
+
+	* libltdl/config/ltmain.m4sh (func_mode_link) [ sysv4*uw2*,
+	unixware7* ]: Work around linker bug on older SCO systems.
+
 2005-11-07  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS)
