--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-11-09  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS): Move setting of
+	`variables_saved_for_relink'..
+	(_LT_SYS_DYNAMIC_LINKER): here, when both `shlibpath_var'
+	and `runpath_var' have been set.
+	Reported by Mike Frysinger <vapier@gentoo.org>.
+
 	* libltdl/Makefile.inc (AM_CPPFLAGS): Do not define
 	HAVE_CONFIG_H.
 	* libltdl/m4/ltdl.m4 (LTDL_INIT): Do not invoke
