--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-12  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* tests/defs.m4sh (func_configure_nofail): Actually pass
+	options (like --disable-shared) to func_configure.
+
 2005-11-11  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [ freebsd ]:
