--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-13  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* tests/quote.test: Do not fail on harmless shell bug present
+	in some ksh88 versions.
+	Reported by Tim Rice <tim@multitalents.net> and others.
+
 2005-11-12  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/ltoptions.m4 (_LT_SET_OPTION): Use m4_warning
