--- a/THANKS
+++ b/THANKS
@@ -59,6 +59,7 @@
   Noah Jeffrey Misch		noah@cs.caltech.edu		  2004-07-05
   Thorsten Glaser		tg@66h.42h.de			  2004-10-11 
   Peter Ekberg			peda@lysator.liu.se		  2005-04-12
+  Tim Rice			tim@multitalents.net		  2005-11-10
 
 
 * The following additional people made especially gracious contributions of
@@ -105,7 +106,6 @@
   Steven M. Schultz		sms@wlv.iipo.gtegsc.com
   Sven Verdoolaege		skimo@liacs.nl
   Tim Mooney			mooney@dogbert.cc.ndsu.NoDak.edu
-  Tim Rice			tim@multitalents.net
   Todd Vierling			tv@pobox.com
   Tom Tromey			tromey@cygnus.com
   Tor Lillqvist			tml@iki.fi
