--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-13  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libtool.m4 (AC_LIBTOOL_LANG_C_CONFIG):
+	Removed `lt_prog_cc_shlib' cruft, not needed any more.
+
 2005-11-13  Kean Johnston  <jkj@sco.com>,
 	    Tim Rice <tim@multitalents.net>
 
