--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-13  Eric Blake  <ebb9@byu.net>
+
+	* libltdl/ltdl.c (lt_dlhandle_iterate): Fix endless loop.
+	(lt_dlinterface_register): Fail if lt__strdup did.
+
 2005-11-13  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 (_LT_LANG_C_CONFIG):
