--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-14  Albert Chin  <china@thewrittenword.com>
+
+	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
+	[ hpux11 ]: Pass +nodefaultrpath when linking on ia64*.
+
 2005-11-14  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	Testsuite portability update round.
