* libtool.m4 (AC_LIBTOOL_SYS_MAX_CMD_LEN) (AC_LIBTOOL_SYS_DYNAMIC_LINKER,  AC_DEPLIBS_CHECK_METHOD) (AC_LIBTOOL_LANG_CXX_CONFIG, AC_LIBTOOL_PROG_COMPILER_PIC) (AC_LIBTOOL_PROG_COMPILER_PIC,  AC_LIBTOOL_PROG_LD_SHLIBS) [ interix3 ]: Support for Interix/Microsoft Services for Unix. * ltdl.m4 (AC_LTDL_SYS_DLOPEN_DEPLIBS): Likewise. * NEWS: Updated.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ New in 1.5.21a: 2005-??-??; CVS version 1.5.21a, Libtool team:
 * Fix 1.5 regression that caused linking a program `-static' to also
   link statically against installed libtool libraries, contrary to
   documented (and actual 1.4.x) behavior.
+* Support for Interix 3 (Windows SFU).
 * Bug Fixes.
 
 New in 1.5.20: 2005-08-31; CVS version 1.5.19a, Libtool team:
