--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2005-11-20  Todd Vierling <tv@netbsd.org>,
+	    Thorsten Glaser <tg@mirbsd.org>
+
+	* libtool.m4 (AC_LIBTOOL_SYS_MAX_CMD_LEN)
+	(AC_LIBTOOL_SYS_DYNAMIC_LINKER,  AC_DEPLIBS_CHECK_METHOD)
+	(AC_LIBTOOL_LANG_CXX_CONFIG, AC_LIBTOOL_PROG_COMPILER_PIC)
+	(AC_LIBTOOL_PROG_COMPILER_PIC,  AC_LIBTOOL_PROG_LD_SHLIBS)
+	[ interix3 ]: Support for Interix/Microsoft Services for Unix.
+	* ltdl.m4 (AC_LTDL_SYS_DLOPEN_DEPLIBS): Likewise.
+	* NEWS: Updated.
+
 2005-11-20  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* tests/link-order.test [ aix, interix ]: Skip command line
